# ChatGuru_Nordja_inte

./: .gitignore  DIAGNOSTICO_TRANSCRICAO_AUDIO.md  OAUTH2_AUTHORIZATION_STEPS.md  README.md  README_CHATGURU_CLI.md  SETUP_CICD.md  SOLUCAO_AUDIO_IMEDIATO.md  analise-gcp-buzzlightear.md  analise-gcp-deployment.md  apply_migration_010_simple.sh  atualizar_opcoes_customfield_clickup.py  chatguru-api-documentation.md  chatguru-cli-tool.js  chatguru-dialog-cli.js  cloudbuild.yaml  comparar_opcoes_folders.py  create-trigger.sh  download-configs.sh  downloaded-logs-20251024-183347.json  extrair_folders_clickup.py  extrair_ids_dropdown.py  extrair_ids_dropdown_clickup.py  extrair_ids_dropdown_workspace.py  extrair_nomes_folders.py  faltam_no_menu.json  find-correct-list.js  folders_hie.json  hie.txt  integracao-chatguru-clickup-nordja.md  listar_campos_personalizados_clickup.py  middleware-rust-estruturado.md  nomes_folders.json  resumo-executivo.md  setup-cloud-build.sh  solucao-final-corrigida.js  test-appengine-webhook.js  test-cli.sh  test-webhook-chatguru-2.js  test-webhook-chatguru.js  trigger.yaml
chatguru-clickup-middleware/: .dockerignore  .env.example  .gcloudignore  .gitignore  API_CHATGURU_RESUMO_EXECUTIVO.md  Cargo.toml  DEPLOY_CHECKLIST.md  DEPLOY_ENRICHMENT.md  DEPLOY_TEST_GUIDE.md  DOCUMENTACAO_DETECCAO_DUPLICATAS.md  Dockerfile  Dockerfile.test  Dockerfile.test.simple  GUIA_API_CHATGURU.md  LOCAL_SETUP.md  MESSAGE_QUEUE_README.md  PUBSUB-EMULATOR.md  QUICK_START.md  README.md  SOLUCAO_ERRO_500.md  TESTING.md  TEST_COMMANDS.md  TEST_README.md  VERTEX_AI_IMPLEMENTATION.md  analise-anotacao-automatica.md  app-enrichment.yaml  apply_migration_010.sh  apply_migrations.sh  check-nova-api-dialog.js  check_database.py  check_db_via_api.sh  clear-and-restart-pubsub.sh  cloudbuild-test.yaml  cloudbuild.yaml  deploy-cloud-run.sh  deploy-production.sh  deploy-quick.sh  deploy-test-local.sh  deploy-test.sh  deploy.sh  (+48 more)
chatguru-clickup-middleware/chatguru/: README.md
chatguru-clickup-middleware/chatguru/src/: client.rs
chatguru-clickup-middleware/clickup/: Cargo.toml  README.md
chatguru-clickup-middleware/clickup/src/: assignees.rs  client.rs  fields.rs  folders.rs  lib.rs  matching.rs  tasks.rs  webhooks.rs
chatguru-clickup-middleware/clickup_v2/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TESTING.md
chatguru-clickup-middleware/clickup_v2/benches/: api_benchmarks.rs.disabled
chatguru-clickup-middleware/config/: SubCategoria_nova.json  SubCategoria_nova.yaml  activity_terms.yaml  ai_prompt.yaml  categoria_nova.json  clickup_fields_static.backup.yaml  clickup_fields_static.yaml  clickup_real_data.json  clickup_real_data.yaml  client_to_folder_mapping.yaml  cliente_solicitante_mappings.yaml  default.toml  development.toml  dropdown_to_folder_mapping.yaml  gcp-optimizations.yaml  learned_patterns.json.example  non_activity_terms.yaml  tasks_move.yaml  tasks_move_test.yaml
chatguru-clickup-middleware/db/: docker-compose.yml  migrate.sh  queries_examples.sql  schema.sql  seed_data.sql
chatguru-clickup-middleware/docker/: Dockerfile
chatguru-clickup-middleware/docs/: # Documentação Completa: ChatGuru-ClickUp Middleware.md  ANALISE_DISCREPANCIAS_WEBHOOK.md  CLICKUP_WEBHOOK_SETUP.md  COMO_ACESSAR_NO_PAINEL_GCP.md  DOCUMENTACAO_API_CHATGURU_COMPLETA.md  GCP_OTIMIZACOES_FASE3.md  IMPLEMENTACAO_TITULO_TAREFAS.md  MIGRACAO_SECRET_MANAGER.md  SECRET_MANAGER_IMPLEMENTACAO.md  SMART_CLASSIFIER.md  VERTEX_AI_IMPLEMENTATION_PLAN.md  VERTEX_AI_INCREMENTAL_IMPLEMENTATION.md  configurar-dialogo-nova-api.md  endpoins.md
chatguru-clickup-middleware/ia_service/: Cargo.toml
chatguru-clickup-middleware/mensageria/: Cargo.toml
chatguru-clickup-middleware/migrations/: 001_create_tables.sql  002_populate_initial.sql  003_fix_fallback_config.sql  004_add_missing_attendants.sql  005_update_space_ids.sql  006_create_system_config.sql  007_create_spaces_folders_lists.sql  008_fix_mapping_logic.sql  009_correct_mapping_logic.sql  010_populate_mappings_with_aliases.sql  010_populate_mappings_with_aliases_fixed.sql  APLICAR_MIGRATION_005.md  EXECUTAR_004.md  EXECUTAR_005.md  EXECUTE_MIGRATION_003_MANUAL.md  FULL_MIGRATION_ALL.sql  INSTRUCOES_COMPLETAS.md  README.md  RESULTADO_MIGRACAO.md  apply_migration_008.py  apply_migration_009.py  apply_migration_009_simple.sh  apply_migration_009_via_proxy.sh  apply_migration_010.py  apply_migration_010.sh  apply_migration_010_via_gcloud.sh  apply_migration_010_via_proxy.sh  apply_via_api.py  run_migration_003.py  run_migration_009_via_app.rs  run_migration_via_api.sh
chatguru-clickup-middleware/scripts/: add-categoria-nova-to-all-spaces.js  all-lists.txt  categorize_tasks.js  classification-log.txt  classify-and-fill-all-tasks.js  create_estrelas.js  create_subcategorias.js  deploy-artifact-registry.sh  deploy-gcp.sh  extract-custom-fields-fast.js  fetch_categories_from_clickup.js  field-mappings.json  get-all-custom-fields-optimized.js  get-all-custom-fields.js  get-field-mappings.js  migrate-all-categories.js  migrate-all-one-by-one.sh  migrate-categoria-individual.js  migrate-fields-with-mapping.js  migrate-to-new-fields.js  migration-mapping.json  migration-progress.json  migration-summary.json  package-lock.json  package.json  quick-deploy.sh  setup-secrets.sh.old  setup_auto_update.sh  solucao-final-clickup.js  test-dialogs.sh  test_auto_categorization.js  update-agendamento-para-agendamentos.js  update-all-lists.js  update-categoria-adm.js  update-custom-fields-by-list.js  update-old-field-values.js  update_categorias.js  update_clickup_fields.js  update_stars_from_excel.js  verify-field-ids.js
chatguru-clickup-middleware/src/: lib.rs  main.rs
chatguru-clickup-middleware/tests/: get-clickup-tags.js  integration_test.js  test-api-direct.js  test-chatguru-api-correct.js  test-clickup-auth.js  test-dialogs-native.js  test-minimal.js  test-quick.js  test-webhook-chatguru-padrao.js  test-webhook-investigation.js  test-webhook-production.js  test-webhook-simple.js  teste-sem-dialogos.js
(+141 files in other folders)
