[package]
name = "chatguru-clickup-middleware"
version = "0.1.0"
edition = "2021"
authors = ["eLai Integration Team"]
description = "Middleware para integração ChatGuru-ClickUp com Google Cloud Pub/Sub"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "macros", "tokio"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Regex for pattern matching
regex = "1.10"

# URL encoding
urlencoding = "2.1"

# Lazy static initialization
once_cell = "1.19"

# Google Cloud
google-cloud-pubsub = "0.30"
google-cloud-googleapis = { version = "0.16", features = ["pubsub"] }
google-cloud-auth = "0.17"  # Para autenticação com Vertex AI
google-cloud-token = "0.1"  # Token provider para Vertex AI
google-cloud-secretmanager-v1 = "1.0"  # Secret Manager

# Database (opcional)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], optional = true }

[features]
default = []
database = ["sqlx"]