[workspace]
members = [
    ".",
    "crates/mensageria",
    "crates/ia-service",
    "crates/clickup",
]
resolver = "2"

[package]
name = "chatguru-clickup-middleware"
version = "0.1.0"
edition = "2021"
authors = ["eLai Integration Team"]
description = "Middleware para integração ChatGuru-ClickUp com Google Cloud Pub/Sub"

[lib]
name = "chatguru_clickup_middleware"
path = "src/lib.rs"

[[bin]]
name = "chatguru-clickup-middleware"
path = "src/main.rs"

[dependencies]
# Local crates
mensageria = { path = "crates/mensageria" }
ia-service = { path = "crates/ia-service" }
clickup = { path = "crates/clickup" }

# Web framework
axum = { version = "0.7", features = ["json", "macros", "tokio"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# String similarity (fuzzy matching)
strsim = "0.11"

# Unicode normalization (remove accents)
deunicode = "1.6"

# Cryptography
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Regex for pattern matching
regex = "1.10"

# NLP e Text Processing
rust-stemmers = "1.2"  # Stemming em português
aho-corasick = "1.1"   # Multi-pattern matching ultrarrápido
# stop-words = "0.8"   # Opcional: remover stop words

# URL encoding
urlencoding = "2.1"

# Lazy static initialization
once_cell = "1.19"

# Google Cloud
google-cloud-pubsub = "0.30"
google-cloud-googleapis = { version = "0.16", features = ["pubsub"] }
google-cloud-auth = "1.0"  # Para autenticação com Vertex AI (Application Default Credentials)
google-cloud-secretmanager-v1 = "1.0"  # Secret Manager
futures-util = "0.3"  # Para StreamExt (Pub/Sub subscriptions)

# Database (DESABILITADO - usando apenas YAML)
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "macros"] }

[dev-dependencies]
httpmock = "0.7"
tokio-test = "0.4"
rand = "0.8"  # Para testes com seleção aleatória

[features]
default = []