[workspace]
members = [
    ".",
    "mensageria",
    "ia-service",
    "chatguru",
]
resolver = "2"

[package]
name = "chatguru-clickup-middleware"
version = "0.1.0"
edition = "2021"
authors = ["eLai Integration Team"]
description = "Middleware para integração ChatGuru-ClickUp com Google Cloud Pub/Sub"

# ================================================
# HISTÓRICO DE MUDANÇAS (Novembro 2025)
# ================================================
#
# 🔄 REFATORAÇÃO MAJOR: REMOÇÃO DO CAMPO "Cliente Solicitante"
#
# CONTEXTO:
# O campo "Cliente Solicitante" era usado para identificar a estrutura organizacional
# no ClickUp (folder/list). Esta abordagem foi substituída por busca direta por nome.
#
# MUDANÇAS IMPLEMENTADAS:
# ✅ Removida dependência de custom fields para identificação de estrutura
# ✅ Implementada busca direta por nome de pasta/lista (clickup/folders.rs)
# ✅ fields.rs mantido apenas para referência e correções futuras
# ✅ Mantido crate local clickup/ para maior controle e flexibilidade
#
# MÓDULOS AFETADOS:
# - clickup/src/folders.rs: Nova implementação de busca por nome
# - clickup/src/fields.rs: Mantido apenas para referência (não usado no fluxo)
# - src/services/workspace_hierarchy.rs: Atualizado para usar nova busca
# - src/handlers/worker.rs: Fluxo principal atualizado
#
# BENEFÍCIOS:
# - Menor complexidade de configuração
# - Maior confiabilidade na identificação de estrutura
# - Independência de configurações de custom fields
# - Facilidade de manutenção e debugging
#
# DECISÃO TÉCNICA - CRATE LOCAL:
# O crate clickup/ permanece local (não publicado) para manter:
# 1. Controle total sobre customizações específicas
# 2. Facilidade para correções rápidas
# 3. Evitar overhead de versionamento externo
# 4. Implementações específicas do projeto ChatGuru-ClickUp
# - fields.rs mantido apenas para referência e correções futuras
#
# DECISÃO TÉCNICA: Crate Local vs Publicado
# Optou-se por manter o crate clickup/ local pelos seguintes motivos:
# 1. Maior controle sobre mudanças específicas do projeto
# 2. Facilidade para implementar correções rápidas sem versionamento externo
# 3. Customizações específicas para integração ChatGuru-ClickUp
# 4. Evitar overhead de publicação para mudanças frequentes

[lib]
name = "chatguru_clickup_middleware"
path = "src/lib.rs"

[[bin]]
name = "chatguru-clickup-middleware"
path = "src/main.rs"

[dependencies]
# Local crates
mensageria = { path = "mensageria" }
ia-service = { path = "ia-service" }
# Updated: Changed from local clickup dependency to official crate (November 2025)
chatguru = { path = "chatguru" }

# Web framework
axum = { version = "0.7", features = ["json", "macros", "tokio"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# JSON Path queries for hierarchical navigation
jmespath = "0.3"

# String similarity (fuzzy matching) - MANTIDO temporariamente para compatibilidade
strsim = "0.11"

# Unicode normalization (remove accents) - MANTIDO temporariamente para compatibilidade  
deunicode = "1.6"

# Unicode NFKD normalization for advanced text processing
unicode-normalization = "0.1"

# Cryptography
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# Regex for pattern matching
regex = "1.10"

# NLP e Text Processing
rust-stemmers = "1.2"  # Stemming em português
aho-corasick = "1.1"   # Multi-pattern matching ultrarrápido
# stop-words = "0.8"   # Opcional: remover stop words

# URL encoding
urlencoding = "2.1"

# Lazy static initialization
once_cell = "1.19"

# Google Cloud
google-cloud-pubsub = "0.30"
google-cloud-googleapis = { version = "0.16", features = ["pubsub"] }
google-cloud-auth = "1.0"  # Para autenticação com Vertex AI (Application Default Credentials)
google-cloud-secretmanager-v1 = "1.0"  # Secret Manager
google-cloud-storage = "0.22"  # Cloud Storage para configs dinâmicos
futures-util = "0.3"  # Para StreamExt (Pub/Sub subscriptions)
clickup = "0.2.0"

# Database (DESABILITADO - usando apenas YAML)
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "macros"] }

[dev-dependencies]
httpmock = "0.7"
tokio-test = "0.4"
rand = "0.8"  # Para testes com seleção aleatória

[features]
default = []
