[package]
name = "clickup"
version = "0.1.0"
edition = "2021"
authors = ["eLai Integration Team"]
description = "Cliente completo da API ClickUp com funcionalidades avançadas (smart search, fuzzy matching)"

# CRATE LOCAL - HISTÓRICO DE MUDANÇAS (Novembro 2025)
#
# REMOÇÃO DO CAMPO "Cliente Solicitante":
# - Removida dependência de custom fields para identificação de estrutura
# - Implementada busca direta por nome de pasta/lista (folders.rs)
# - fields.rs mantido apenas para referência e correções futuras
#
# DECISÃO DE MANTER CRATE LOCAL:
# Este crate permanece local (não publicado) pelos seguintes motivos:
# 1. Controle total sobre customizações específicas da integração
# 2. Facilidade para correções rápidas sem overhead de versionamento
# 3. Implementações específicas para o projeto ChatGuru-ClickUp
# 4. Evitar dependências externas para funcionalidades core
#
# MÓDULOS AFETADOS:
# - folders.rs: Implementada busca por nome diretamente
# - fields.rs: Mantido apenas para referência (não usado no fluxo principal)
# - matching.rs: Atualizado para usar busca por nome

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1.0", features = ["sync", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# String matching & normalization
strsim = "0.11"        # Jaro-Winkler fuzzy matching
deunicode = "1.6"      # Unicode normalization (remove accents)

# Logging
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# URL encoding
urlencoding = "2.1"

# Webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
