[package]
name = "clickup_v2"
version = "0.1.1"
edition = "2021"
authors = ["William Duarte"]
description = "A comprehensive Rust client library and CLI for ClickUp API v2 with OAuth2 authentication, task management, and custom fields support"
documentation = "https://docs.rs/clickup_v2"
homepage = "https://github.com/nextlw/crate_clickup_v2"
repository = "https://github.com/nextlw/crate_clickup_v2"
readme = "README.md"
license = "MIT"
keywords = ["clickup", "api", "oauth2", "task-management", "cli"]
categories = ["api-bindings", "command-line-utilities", "authentication"]

[lib]
name = "clickup_v2"
path = "src/lib.rs"

[[bin]]
name = "clickup"
path = "src/main.rs"

[dependencies]
# HTTP e requisições
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Runtime assíncrono
tokio = { version = "1", features = ["full"] }

# Variáveis de ambiente
dotenv = "0.15"

# OAuth2
oauth2 = "4.4"

# URLs e parsing
url = "2.5"

# Servidor HTTP para callback
warp = "0.3"

# Abrir navegador
webbrowser = "0.8"

# Tratamento de erros
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Base64 (para PKCE se necessário)
base64 = "0.21"

# Data e hora
chrono = { version = "0.4", features = ["serde"] }

# URL encoding
urlencoding = "2.1"

# CLI argument parsing
clap = { version = "4.4", features = ["derive", "env"] }

[dev-dependencies]
# Framework de testes assíncronos
tokio-test = "0.4"

# Mocking para HTTP
mockito = "1.2"
wiremock = "0.6"

# Assertions mais expressivas
pretty_assertions = "1.4"
claim = "0.5"

# Geração de dados de teste
fake = "2.9"
quickcheck = "1.0"
quickcheck_macros = "1.0"

# Testes de snapshot
insta = "1.34"

# Variáveis de ambiente para testes
temp-env = "0.3"

# Serialização para testes
serde_test = "1.0"

# Arquivos temporários para testes
tempfile = "3.8"

# Cobertura de código
cargo-tarpaulin = "0.27"

# Benchmark
criterion = { version = "0.5", features = ["html_reports"] }

# Testes de propriedades
proptest = "1.4"

# [[bench]]
# name = "api_benchmarks"
# harness = false
