[package]
name = "ia-service"
version = "0.1.0"
edition = "2021"
authors = ["eLai Integration Team"]
description = "Serviço unificado de IA usando async-openai para classificação e processamento multimodal"

[dependencies]
# OpenAI SDK oficial
async-openai = "0.27"

# Async runtime
tokio = { version = "1.0", features = ["sync", "time", "macros", "fs"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"

# Base64 encoding
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
